--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h1 style="color:rgb(131, 120, 142);margin-top:200px;text-align: center;font-size: 50px;">WETA | Minecraft</h1>
         <h4 style="color:rgb(68, 62, 73);text-align: center;">WETA生态园旗下Minecraft服务器</h4>
     </div>
-    <div style="display: flex;margin-left: 10px;margin-right: 10px;width: auto;height: auto;background-color: white;flex-direction: column;flex: 2;">
+    <div style="display: flex;width: auto;height: auto;background-color: white;flex-direction: column;flex: 2;">
         <h1 style="text-align: center;">服务器简介</h1>
-        <h3 style="display: flex;flex-direction: column;justify-content: center;align-items: center;margin-left: 50px;">WETA | Minecraft是WETA生态园旗下游戏服务器，服务器主打玩法为原版创造，玩家可以在此服务器中享受建造所带来的乐趣，留下美好回忆。
+        <h3 style="display: flex;flex-direction: column;justify-content: center;align-items: center;">WETA | Minecraft是WETA生态园旗下游戏服务器，服务器主打玩法为原版创造，玩家可以在此服务器中享受建造所带来的乐趣，留下美好回忆。
             <p></p>
             <script>
                 var p=""
