--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
     <div style="display: flex;margin: 0;width: auto;height: 500px;background:url(https://pic2.imgdb.cn/item/646060910d2dde577763ac8e.png);background-position: center center;flex-direction: column;flex: 1;">
         <h1 style="color:rgb(131, 120, 142);margin-top:200px;text-align: center;font-size: 50px;">WETA | Minecraft</h1>
-        <h4 style="color:rgb(68, 62, 73);text-align: center;">WETA生态园旗下Minecraft服务器</h4>
+        <h4 style="color:rgb(68, 62, 73);text-align: center;">尽情发挥你的想象力吧！</h4>
     </div>
     <div style="display: flex;width: auto;height: auto;background-color: white;flex-direction: column;flex: 2;">
         <h1 style="text-align: center;">服务器简介</h1>
