--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
     </div>
     <div style="display: flex;width: auto;height: auto;background-color: white;flex-direction: column;flex: 2;">
         <h1 style="text-align: center;">服务器简介</h1>
-        <h3 style="display: flex;flex-direction: column;justify-content: center;align-items: center;">WETA | Minecraft是WETA生态园旗下游戏服务器，服务器主打玩法为原版创造，玩家可以在此服务器中享受建造所带来的乐趣，留下美好回忆。
+        <h3 style="display: flex;flex-direction: column;justify-content: center;align-items: center;">欢迎来到WETA我的世界创造服务器！
+
+我们的服务器是一个专注于创造模式的游戏环境。在这里，玩家可以尽情发挥创意，自由建造各种令人惊叹的建筑、景观和艺术品。无论你是一个建筑师、设计师还是艺术家，我们的服务器都将为你提供一个完美的创作平台。
+
+首先，我们的服务器以稳定性而闻名。我们拥有最新的硬件设备和高速互联网连接，以确保服务器的稳定运行和流畅的游戏体验。我们的技术团队经验丰富，随时准备处理任何可能出现的问题，以确保服务器的顺畅运行。
+
+其次，我们的管理团队是非常出色的。我们拥有一支经验丰富、友善且负责任的管理团队，他们将确保服务器的秩序和安全。他们会定期巡视服务器，处理任何不当行为，并提供帮助和支持给玩家。我们的目标是为每个玩家提供一个友好、和谐的游戏环境。
+
+最重要的是，我们的服务器鼓励玩家自由创造。在我们的服务器上，你将没有任何限制，你可以建造你想要的任何东西。无论是一个巨大的城市、一个宏伟的宫殿还是一个奇幻的冒险地图，你的想象力将是唯一的限制。我们相信每个玩家都有独特的创造力和想法，我们希望为你提供一个展示和分享的平台。
+
+总而言之，我们的我的世界创造服务器是一个稳定、有好的管理团队、允许玩家自由创造的游戏环境。加入我们，与其他创造者一起建造、探索和分享你的创意！无论你是新手还是老手，我们都欢迎你的加入。让我们一起创造属于我们自己的奇幻世界！
             <p></p>
             <script>
                 var p=""
