--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 style="text-align: center;">服务器简介</h1>
         <h3 style="display: flex;flex-direction: column;justify-content: center;align-items: center;">欢迎来到WETA我的世界创造服务器！
 
-我们的服务器是一个专注于创造模式的游戏环境。在这里，玩家可以尽情发挥创意，自由建造各种令人惊叹的建筑、景观和艺术品。无论你是一个建筑师、设计师还是艺术家，我们的服务器都将为你提供一个完美的创作平台。
+<br>我们的服务器是一个专注于创造模式的游戏环境。在这里，玩家可以尽情发挥创意，自由建造各种令人惊叹的建筑、景观和艺术品。无论你是一个建筑师、设计师还是艺术家，我们的服务器都将为你提供一个完美的创作平台。
 
 首先，我们的服务器以稳定性而闻名。我们拥有最新的硬件设备和高速互联网连接，以确保服务器的稳定运行和流畅的游戏体验。我们的技术团队经验丰富，随时准备处理任何可能出现的问题，以确保服务器的顺畅运行。
 
